feat: Enhance AccountCreatedHandler and LedgerSystemE2EIntegrationTest with observability and event handler checks