@@ -6,6 +6,8 @@ import com.charity_hub.cases.internal.domain.contracts.ICaseRepo;
 import com.charity_hub.cases.internal.domain.model.Contribution.Contribution;
 import com.charity_hub.cases.internal.domain.model.Contribution.ContributionStatus;
 import com.charity_hub.ledger.internal.application.contracts.ILedgerRepository;
+import com.charity_hub.ledger.internal.application.eventHandlers.ContributionPaidHandler;
+import com.charity_hub.ledger.internal.application.eventHandlers.ContributionConfirmedHandler;
 import com.charity_hub.ledger.internal.domain.model.Ledger;
 import com.charity_hub.ledger.internal.domain.model.Member;
 import com.charity_hub.ledger.internal.domain.model.MemberId;
@@ -36,8 +38,8 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 /**
  * E2E Integration Tests for the complete ledger system lifecycle.
- * Tests the flow: Account Creation → Contribution → Payment → Ledger Balance
- * Updates
+ * Tests the flow: Account Creation → Contribution (Pledged) → Payment →
+ * Confirmation → Ledger Balance Updates
  */
 @SpringBootTest
 @AutoConfigureMockMvc
@@ -46,226 +48,221 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 @SuppressWarnings("resource")
 public class LedgerSystemE2EIntegrationTest {
 
-    private static final MongoDBContainer mongoDBContainer;
+        private static final MongoDBContainer mongoDBContainer;
 
-    static {
-        mongoDBContainer = new MongoDBContainer("mongo:7.0")
-                .withStartupTimeout(Duration.ofMinutes(2))
-                .withReuse(true);
-        mongoDBContainer.start();
-    }
+        static {
+                mongoDBContainer = new MongoDBContainer("mongo:7.0")
+                                .withStartupTimeout(Duration.ofMinutes(2))
+                                .withReuse(true);
+                mongoDBContainer.start();
+        }
 
-    @DynamicPropertySource
-    static void setProperties(DynamicPropertyRegistry registry) {
-        String mongoUri = mongoDBContainer.getReplicaSetUrl() +
-                "?serverSelectionTimeoutMS=1000&connectTimeoutMS=1000&socketTimeoutMS=1000";
-        registry.add("spring.data.mongodb.uri", () -> mongoUri);
-    }
+        @DynamicPropertySource
+        static void setProperties(DynamicPropertyRegistry registry) {
+                String mongoUri = mongoDBContainer.getReplicaSetUrl() +
+                                "?serverSelectionTimeoutMS=1000&connectTimeoutMS=1000&socketTimeoutMS=1000";
+                registry.add("spring.data.mongodb.uri", () -> mongoUri);
+        }
 
-    @Autowired
-    private MockMvc mockMvc;
+        @Autowired
+        private MockMvc mockMvc;
 
-    @Autowired
-    private IAccountRepo accountRepo;
+        @Autowired
+        private IAccountRepo accountRepo;
 
-    @Autowired
-    private MembersNetworkRepo membersNetworkRepo;
+        @Autowired
+        private MembersNetworkRepo membersNetworkRepo;
 
-    @Autowired
-    private ILedgerRepository ledgerRepository;
+        @Autowired
+        private ILedgerRepository ledgerRepository;
 
-    @Autowired
-    private ICaseRepo caseRepo;
+        @Autowired
+        private ICaseRepo caseRepo;
 
-    @Test
-    @WithMockUser
-    @DisplayName("Complete E2E Flow: Account → Contribution → Payment → Verify Ledger")
-    void shouldCompleteFullLedgerLifecycle() throws Exception {
-        // ====================================================================
-        // STEP 1: Create Root Account with Member and Ledger
-        // ====================================================================
-        Account rootAccount = Account.newAccount("1000000000", "device-root-12345", "ANDROID", true);
-        accountRepo.save(rootAccount);
-        UUID rootId = rootAccount.getId().value();
+        @Autowired(required = false)
+        private ContributionPaidHandler contributionPaidHandler;
 
-        // Create root member (no parent)
-        Member rootMember = new Member(
-                new MemberId(rootId),
-                null, // Root has no parent
-                Collections.emptyList(),
-                Collections.emptyList());
-        membersNetworkRepo.save(rootMember);
+        @Autowired(required = false)
+        private ContributionConfirmedHandler contributionConfirmedHandler;
 
-        // Create root ledger
-        Ledger rootLedger = Ledger.createNew(new MemberId(rootId));
-        ledgerRepository.save(rootLedger);
+        @Autowired
+        private com.charity_hub.cases.internal.application.commands.ConfirmContribution.ConfirmContributionHandler confirmContributionHandlerCases;
 
-        // Verify root ledger
-        rootLedger = ledgerRepository.findByMemberId(new MemberId(rootId));
-        assertThat(rootLedger).isNotNull();
-        assertThat(rootLedger.getDueAmount().value()).isEqualTo(0);
-        assertThat(rootLedger.getDueNetworkAmount().value()).isEqualTo(0);
-        System.out.println("✓ STEP 1: Root account created - dueAmount=0, dueNetworkAmount=0");
+        @Test
+        @WithMockUser
+        @DisplayName("Test Event Handlers Are Created")
+        void shouldCheckEventHandlersExist() {
+                assertThat(contributionPaidHandler).as("ContributionPaidHandler should be created").isNotNull();
+                assertThat(contributionConfirmedHandler).as("ContributionConfirmedHandler should be created")
+                                .isNotNull();
+        }
 
-        // ====================================================================
-        // STEP 2: Create Child Account with Parent Relationship
-        // ====================================================================
-        Account childAccount = Account.newAccount("2000000000", "device-child-1234", "ANDROID", false);
-        accountRepo.save(childAccount);
-        UUID childId = childAccount.getId().value();
+        @Test
+        @WithMockUser(authorities = "FULL_ACCESS")
+        @DisplayName("Complete E2E Flow: Account → Contribution → Payment → Confirm → Verify Ledger")
+        void shouldCompleteFullLedgerLifecycle() throws Exception {
+                // ====================================================================
+                // STEP 1: Create Root Account with Member and Ledger
+                // ====================================================================
+                Account rootAccount = Account.newAccount("1000000000", "device-root-12345", "ANDROID", true);
+                accountRepo.save(rootAccount);
+                UUID rootId = rootAccount.getId().value();
 
-        // Create child member with parent=root
-        Member childMember = new Member(
-                new MemberId(childId),
-                new MemberId(rootId), // Parent is root
-                List.of(new MemberId(rootId)), // Ancestors include root
-                Collections.emptyList());
-        membersNetworkRepo.save(childMember);
+                // Create root member (no parent) - MOCKING the Network Repo behavior
+                Member rootMember = new Member(
+                                new MemberId(rootId),
+                                null, // Root has no parent
+                                Collections.emptyList(),
+                                Collections.emptyList());
+                membersNetworkRepo.save(rootMember);
 
-        // Create child ledger
-        Ledger childLedger = Ledger.createNew(new MemberId(childId));
-        ledgerRepository.save(childLedger);
+                // Create root ledger
+                Ledger rootLedger = Ledger.createNew(new MemberId(rootId));
+                ledgerRepository.save(rootLedger);
 
-        // Verify child setup
-        childLedger = ledgerRepository.findByMemberId(new MemberId(childId));
-        assertThat(childLedger).isNotNull();
-        assertThat(childLedger.getDueAmount().value()).isEqualTo(0);
+                // Verify root ledger
+                rootLedger = ledgerRepository.findByMemberId(new MemberId(rootId));
+                assertThat(rootLedger.getDueAmount().value()).isEqualTo(0);
+                assertThat(rootLedger.getDueNetworkAmount().value()).isEqualTo(0);
 
-        Member childMemberVerify = membersNetworkRepo.getById(childId);
-        assertThat(childMemberVerify.parent().value()).isEqualTo(rootId);
-        System.out.println("✓ STEP 2: Child account created - parent=" + rootId);
+                // ====================================================================
+                // STEP 2: Create Child Account with Parent Relationship
+                // ====================================================================
+                Account childAccount = Account.newAccount("2000000000", "device-child-1234", "ANDROID", false);
+                accountRepo.save(childAccount);
+                UUID childId = childAccount.getId().value();
 
-        // ====================================================================
-        // STEP 3: Create Contribution (Pledge)
-        // ====================================================================
-        int contributionAmount = 1000;
-        Contribution contribution = Contribution.create(
-                UUID.randomUUID(),
-                childId,
-                99999, // Test case code
-                contributionAmount,
-                ContributionStatus.PLEDGED,
-                new Date(),
-                null);
-        caseRepo.save(contribution);
-        UUID contributionId = contribution.getId().value();
-        System.out.println("✓ STEP 3: Contribution created - amount=" + contributionAmount);
+                // Create child member with parent=root. Update root to have child.
+                Member childMember = new Member(
+                                new MemberId(childId),
+                                new MemberId(rootId), // Parent is root
+                                List.of(new MemberId(rootId)), // Ancestors include root
+                                Collections.emptyList());
+                membersNetworkRepo.save(childMember);
 
-        // ====================================================================
-        // STEP 4: Pay Contribution
-        // ====================================================================
-        mockMvc.perform(post("/v1/contributions/{contributionId}/pay", contributionId))
-                .andExpect(status().isOk());
+                // Update root to include child in children list
+                rootMember = new Member(
+                                new MemberId(rootId),
+                                null,
+                                Collections.emptyList(),
+                                List.of(new MemberId(childId)));
+                membersNetworkRepo.save(rootMember);
 
-        Thread.sleep(1000); // Wait for async event processing
+                // Create child ledger
+                Ledger childLedger = Ledger.createNew(new MemberId(childId));
+                ledgerRepository.save(childLedger);
 
-        // ====================================================================
-        // STEP 5: Confirm Contribution
-        // ====================================================================
-        mockMvc.perform(post("/v1/contributions/{contributionId}/confirm", contributionId))
-                .andExpect(status().isOk());
+                System.out.println("✓ STEP 1 & 2: Accounts and Ledgers Setup Completed");
 
-        Thread.sleep(1000); // Wait for async event processing
+                // ====================================================================
+                // STEP 3: Create Contribution (Pledge)
+                // This triggers ContributionMade -> Updates Ledger
+                // ====================================================================
+                int contributionAmount = 1000;
+                // Contribution.create RAISES ContributionMade event (impl detail)
+                Contribution contribution = Contribution.new_(
+                                childId,
+                                99999, // Test case code
+                                contributionAmount);
+                UUID contributionId = contribution.getId().value();
+                // Saving should dispatch the event to handlers
+                caseRepo.save(contribution);
 
-        // ====================================================================
-        // STEP 6: Verify Ledger States After Full Lifecycle
-        // ====================================================================
-        childLedger = ledgerRepository.findByMemberId(new MemberId(childId));
-        rootLedger = ledgerRepository.findByMemberId(new MemberId(rootId));
+                Thread.sleep(2000); // Wait for async event processing
 
-        System.out.println("\n========================================");
-        System.out.println("FINAL LEDGER STATES:");
-        System.out.println("========================================");
-        System.out.println("Child Ledger:");
-        System.out.println("  dueAmount: " + childLedger.getDueAmount().value());
-        System.out.println("  dueNetworkAmount: " + childLedger.getDueNetworkAmount().value());
-        System.out.println("  transactions: " + childLedger.getTransactions().size());
+                // Verify Child Ledger: Due should increase (Pledged)
+                childLedger = ledgerRepository.findByMemberId(new MemberId(childId));
+                assertThat(childLedger.getDueAmount().value()).isEqualTo(contributionAmount);
 
-        System.out.println("\nRoot Ledger:");
-        System.out.println("  dueAmount: " + rootLedger.getDueAmount().value());
-        System.out.println("  dueNetworkAmount: " + rootLedger.getDueNetworkAmount().value());
-        System.out.println("  transactions: " + rootLedger.getTransactions().size());
+                // Verify Root Ledger: DueNetwork should increase (Expectation from child)
+                rootLedger = ledgerRepository.findByMemberId(new MemberId(rootId));
+                assertThat(rootLedger.getDueNetworkAmount().value()).isEqualTo(contributionAmount);
+                // Root Due should remain 0 (it's their child's debt, not theirs yet)
+                assertThat(rootLedger.getDueAmount().value()).isEqualTo(0);
 
-        // Verify transactions were recorded
-        assertThat(childLedger.getTransactions()).isNotEmpty();
-        assertThat(rootLedger.getTransactions()).isNotEmpty();
-        System.out.println("\n✓ Transactions recorded in both ledgers");
+                System.out.println("✓ STEP 3: Pledge Verified on Ledgers");
 
-        // ====================================================================
-        // STEP 7: Test Query Endpoints
-        // ====================================================================
-        mockMvc.perform(get("/v1/ledger/{userId}", childId))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.contributions").isArray());
+                // ====================================================================
+                // STEP 4: Pay Contribution
+                // This triggers ContributionPaid -> Ledger UNCHANGED (stateless pay)
+                // ====================================================================
+                mockMvc.perform(post("/v1/contributions/{contributionId}/pay", contributionId))
+                                .andExpect(status().isOk());
 
-        mockMvc.perform(get("/v1/ledger/summary/{userId}", childId))
-                .andExpect(status().isOk());
+                Thread.sleep(2000);
 
-        System.out.println("✓ STEP 7: Query endpoints working\n");
+                // Check Ledger Unchanged
+                childLedger = ledgerRepository.findByMemberId(new MemberId(childId));
+                assertThat(childLedger.getDueAmount().value()).isEqualTo(contributionAmount); // Still "Due" until
+                                                                                              // confirmed
 
-        System.out.println("========================================");
-        System.out.println("✅ E2E LEDGER TEST PASSED");
-        System.out.println("========================================");
-    }
+                // Check Contribution Status in DB (should be PAID)
+                Contribution paidContribution = caseRepo.getContributionById(contributionId).get();
+                assertThat(paidContribution.getContributionStatus()).isEqualTo(ContributionStatus.PAID);
 
-    @Test
-    @WithMockUser
-    @DisplayName("Balance Verification: Balances Update After Contribution Lifecycle")
-    void shouldUpdateBalancesAfterContribution() throws Exception {
-        // Setup: Create root and child with ledgers
-        Account root = Account.newAccount("3000000000", "dev-root", "ANDROID", true);
-        accountRepo.save(root);
-        UUID rootId = root.getId().value();
+                System.out.println("✓ STEP 4: Payment Verified (Ledger Unchanged, Status Updated)");
 
-        Member rootMember = new Member(new MemberId(rootId), null,
-                Collections.emptyList(), Collections.emptyList());
-        membersNetworkRepo.save(rootMember);
-        Ledger rootLedger = Ledger.createNew(new MemberId(rootId));
-        ledgerRepository.save(rootLedger);
+                // ====================================================================
+                // STEP 5: Confirm Contribution
+                // This triggers ContributionConfirmed -> Updates Ledger
+                // ====================================================================
+                // Calling handler directly to simulate Authorized PARENT action
 
-        Account child = Account.newAccount("3000000001", "dev-child", "ANDROID", false);
-        accountRepo.save(child);
-        UUID childId = child.getId().value();
+                com.charity_hub.cases.internal.application.commands.ConfirmContribution.ConfirmContribution confirmCmd = new com.charity_hub.cases.internal.application.commands.ConfirmContribution.ConfirmContribution(
+                                contributionId, rootId);
 
-        Member childMember = new Member(new MemberId(childId), new MemberId(rootId),
-                List.of(new MemberId(rootId)), Collections.emptyList());
-        membersNetworkRepo.save(childMember);
-        Ledger childLedger = Ledger.createNew(new MemberId(childId));
-        ledgerRepository.save(childLedger);
+                confirmContributionHandlerCases.handle(confirmCmd);
 
-        // Record initial balances
-        int initialChildDue = childLedger.getDueAmount().value();
-        int initialRootNetwork = rootLedger.getDueNetworkAmount().value();
+                Thread.sleep(2000); // Wait for async Ledger update
 
-        // Create and process contribution
-        int amount = 2000;
-        Contribution contribution = Contribution.create(
-                UUID.randomUUID(), childId, 88888, amount,
-                ContributionStatus.PLEDGED, new Date(), null);
-        caseRepo.save(contribution);
+                // Verify Balances:
+                // 1. Child Due should be CLEARED (was 1000, now 0) - because debt is confirmed
+                // passed up
+                childLedger = ledgerRepository.findByMemberId(new MemberId(childId));
+                assertThat(childLedger.getDueAmount().value()).isEqualTo(0);
 
-        mockMvc.perform(post("/v1/contributions/{id}/pay", contribution.getId().value()))
-                .andExpect(status().isOk());
-        Thread.sleep(1000);
+                // 2. Child DueNetwork? Should be 0 (no network).
+                assertThat(childLedger.getDueNetworkAmount().value()).isEqualTo(0);
 
-        mockMvc.perform(post("/v1/contributions/{id}/confirm", contribution.getId().value()))
-                .andExpect(status().isOk());
-        Thread.sleep(1000);
+                // 3. Root DueNetwork should be CLEARED (was 1000, expecting from child -> now
+                // confirmed)
+                rootLedger = ledgerRepository.findByMemberId(new MemberId(rootId));
+                assertThat(rootLedger.getDueNetworkAmount().value()).isEqualTo(0);
 
-        // Verify balances changed
-        childLedger = ledgerRepository.findByMemberId(new MemberId(childId));
-        rootLedger = ledgerRepository.findByMemberId(new MemberId(rootId));
+                // 4. Root Due should INCREASE (was 0 -> now 1000) - Parent now owns the
+                // obligation up
+                assertThat(rootLedger.getDueAmount().value()).isEqualTo(contributionAmount);
 
-        System.out.println("\nBalance Verification:");
-        System.out.println("  Child dueAmount: " + initialChildDue + " → " +
-                childLedger.getDueAmount().value());
-        System.out.println("  Root dueNetworkAmount: " + initialRootNetwork + " → " +
-                rootLedger.getDueNetworkAmount().value());
+                System.out.println("✓ STEP 5: Confirmation Verified (Ledgers Settled and Cascaded)");
 
-        boolean balancesChanged = childLedger.getDueAmount().value() != initialChildDue ||
-                rootLedger.getDueNetworkAmount().value() != initialRootNetwork;
+                // ====================================================================
+                // STEP 6: Test Query Endpoints
+                // ====================================================================
+                mockMvc.perform(get("/v1/ledger/{userId}", childId))
+                                .andExpect(status().isOk())
+                                .andExpect(jsonPath("$.contributions").isArray());
 
-        System.out.println("✅ Balance test: " + (balancesChanged ? "PASSED - Balances updated"
-                : "Note: Check event processing if balances unchanged"));
-    }
+                // Test Summary Endpoint with manual authentication (Parent seeing connections)
+                com.charity_hub.shared.auth.AccessTokenPayload payload = new com.charity_hub.shared.auth.AccessTokenPayload(
+                                "test-aud", "test-jti", new Date(), new Date(),
+                                rootId.toString(), "Test Parent", null, false, "1234567890", "test-device",
+                                List.of("FULL_ACCESS"));
+                org.springframework.security.core.Authentication auth = new org.springframework.security.authentication.UsernamePasswordAuthenticationToken(
+                                payload, "N/A",
+                                java.util.List.of(
+                                                new org.springframework.security.core.authority.SimpleGrantedAuthority(
+                                                                "FULL_ACCESS")));
+
+                mockMvc.perform(get("/v1/ledger/summary")
+                                .with(org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors
+                                                .authentication(auth)))
+                                .andExpect(status().isOk())
+                                .andExpect(jsonPath("$.connectionsLedger", org.hamcrest.Matchers.hasSize(1)));
+
+                System.out.println("✓ STEP 6: Query endpoints working\n");
+
+                System.out.println("========================================");
+                System.out.println("✅ E2E LEDGER TEST PASSED");
+                System.out.println("========================================");
+        }
 }
